# agent-reach-rs

./: .gitignore  Cargo.toml  HANDOFF.md  INVESTIGATION.md  LICENSE  README.md  ROADMAP.md  TAXONOMY.md  analyze.ps1  pipeline.ps1  pipeline_data.json  run_all.ps1  subtitles.ps1  youtube_443.json  youtube_full.json  yt_urls.txt
scripts/: transcribe_xiaoyuzhou.sh
src/: cli.rs  config.rs  cookie_extract.rs  doctor.rs  ffmpeg_dl.rs  install.rs  lib.rs  main.rs  mcp_server.rs  probe.rs  skill.rs  transcribe.rs
src/backends/: mod.rs  opencli.rs
src/channels/: base.rs  bilibili.rs  exa_search.rs  github.rs  linkedin.rs  mod.rs  reddit.rs  rss.rs  twitter.rs  v2ex.rs  web.rs  xiaohongshu.rs  xiaoyuzhou.rs  xueqiu.rs  youtube.rs
src/utils/: mod.rs  paths.rs  text.rs
subtitles/: -kSOTtYzgEw.txt  -rUKr8JDits.en.txt  -rUKr8JDits.txt  0K7NYdnFjHY.en.txt  0PjDlI21es4.txt  0XoXNG65rfg.en.txt  0gSf-ybLS2Y.en.txt  0gSf-ybLS2Y.txt  0rI37UQ_HqU.en.txt  0rI37UQ_HqU.txt  12P7bNnWNT0.txt  1GVBRhDI5No.en.txt  1GVBRhDI5No.txt  1P5qQf94Hdc.en.txt  1jlKUxqRQAw.txt  24BPH3wQzRU.txt  2F0OitFiNdI.txt  2ORhveDuFX4.en.txt  2XJqLPqHtyo.txt  2ZCc4k_IV5w.en.txt  2ZCc4k_IV5w.txt  2lmBj_XQq0I.en.txt  2lmBj_XQq0I.txt  3-tT9jIDGnQ.en.txt  366lsOXiHAU.txt  3BdocOsVBMA.txt  3gAfo0lGzjE.en.txt  3gAfo0lGzjE.ja.txt  3gAfo0lGzjE.txt  3gAfo0lGzjE.zh-Hans.txt  49-rIRKVaes.en.txt  49-rIRKVaes.txt  4DrVf07wlq8.en.txt  4DrVf07wlq8.txt  4OpewW1nSiw.en.txt  4Tp6nPZa5is.en.txt  4e3lK7OhuOg.en.txt  4e3lK7OhuOg.txt  4nwIM3iEC0c.en.txt  4nwIM3iEC0c.en.vtt  (+547 more)
tests/: blackbox.rs  real_verification.rs
